@@ -39,6 +39,8 @@ lib/mechanize/history.rb
 lib/mechanize/http.rb
 lib/mechanize/http/agent.rb
 lib/mechanize/http/auth_challenge.rb
+lib/mechanize/http/auth_realm.rb
+lib/mechanize/http/www_authenticate_parser.rb
 lib/mechanize/inspect.rb
 lib/mechanize/monkey_patch.rb
 lib/mechanize/page.rb
@@ -55,6 +57,7 @@ lib/mechanize/redirect_not_get_or_head_error.rb
 lib/mechanize/response_code_error.rb
 lib/mechanize/response_read_error.rb
 lib/mechanize/robots_disallowed_error.rb
+lib/mechanize/unauthorized_error.rb
 lib/mechanize/unsupported_scheme_error.rb
 lib/mechanize/util.rb
 test/data/htpasswd
@@ -152,6 +155,8 @@ test/test_mechanize_form_image_button.rb
 test/test_mechanize_form_textarea.rb
 test/test_mechanize_http_agent.rb
 test/test_mechanize_http_auth_challenge.rb
+test/test_mechanize_http_auth_realm.rb
+test/test_mechanize_http_www_authenticate_parser.rb
 test/test_mechanize_link.rb
 test/test_mechanize_page_encoding.rb
 test/test_mechanize_page_link.rb
