@@ -1,0 +1,3 @@
+class Mechanize::UnauthorizedError < Mechanize::ResponseCodeError
+end
+
