@@ -37,6 +37,7 @@
     be used for the old 'Mac Safari' alias.
   * When given multiple HTTP authentication options mechanize can better pick
     the strongest method.
+  * Added support for NTLM authentication, but this has not been tested.
 
 * Bug fixes
   * Mechanize#cookie_jar= works again.  Issue #126
